# rickdate

./: README.md  pyproject.toml  requirements.txt  setup.cfg
src/rickdate/: rickdate.py
