[metadata]
name = rickdate-emrysr
version = 0.0.2
author = Emrys Roberts
author_email = bistro@emrys.cymru
description = Format a date as 3 characters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/emrysr/rickdate
project_urls =
    Bug Tracker = https://github.com/emrysr/rickdate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
